# bmi

./: Makefile.in  aclocal.m4  configure.ac  configure.in  pvfs2-config.h.in
include/: pvfs2-types.h
maint/config/: bdb.m4  openssl.m4
patches/: bmi-osx.patch
src/common/misc/: pint-mem.c  pint-mem.h  str-utils.c
src/io/bmi/: bmi-types.h  bmi.c
src/io/bmi/bmi_ib/: ib.c
src/io/bmi/bmi_portals/: README  module.mk.in  portals.c  portals.h  portals_comm.c  portals_comm.h  portals_conn.c  portals_conn.h  portals_fc.c  portals_fc.h  portals_helpers.c  portals_helpers.h  portals_trace.c  portals_trace.h  portals_wrappers.c  portals_wrappers.h
src/io/bmi/bmi_portals/test/: driver.c  driver_bmi.c  driver_simple.c
src/io/bmi/bmi_portals_old/: portals.jmc.c
src/io/bmi/bmi_tcp/: .bmi-tcp.c.swp  bmi-tcp.c  module.mk.in  socket-collection-epoll.c  socket-collection-epoll.h  socket-collection.c  socket-collection.h
src/io/bmi/bmi_zoid/: server.c
test/: pingpong.c
